comments and delete posts

--- a/angularProj/chatboard/src/app/disscussion/comments/comments.component.html
+++ b/angularProj/chatboard/src/app/disscussion/comments/comments.component.html
@@ -20,7 +20,7 @@
     <ul class="list-group">
       <li class="list-group-item" *ngFor="let comment of commentArr">{{ comment.body }}
         <div class="input-group-prepend float-right">
-          <span class="input-group-text" id="inputGroup-sizing-sm">{{ comment.userName }}</span>
+          <span class="input-group-text" id="inputGroup-sizing-sm">{{ comment.username }}</span>
         </div>
       </li>
     </ul>
