--- a/angularProj/chatboard/src/app/profilepage/profilepage.component.html
+++ b/angularProj/chatboard/src/app/profilepage/profilepage.component.html
@@ -30,6 +30,9 @@
     </div>
     <div class="card-body" *ngIf="userShow.track">
       <h5 class="card-title">Track: {{userShow.track}}</h5>
+      <p class="pull-left">Expected Year of Graduation:
+          <strong>{{userShow.gradYear}}</strong>
+      </p>
     </div>
   </div>
   <div class="row">
