--- a/angularProj/chatboard/src/app/auth/signup/signup.component.html
+++ b/angularProj/chatboard/src/app/auth/signup/signup.component.html
@@ -18,6 +18,7 @@
             <input class="form-control mb-2" type="text" name="firstname" id="firstname" placeholder="First Name" required ngModel>
             <input class="form-control mb-2" type="text" name="lastname" id="lastname" placeholder="Last Name" required ngModel>
             <input class="form-control mb-2" type="email" name="email" id="email" placeholder="Email" email required ngModel #emailAddress="ngModel">
+            <input class="form-control mb-2" type="text" name="gradyear" id="gradyear" placeholder="Expected Graduation Year" required ngModel>
             <input class="form-control mb-2" name="trackSelect" id ="trackSelect" placeholder="Degree Track" required ngModel>
           </div>
           <div class="container">
