--- a/angularProj/chatboard/src/app/disscussion/disscussion.component.html
+++ b/angularProj/chatboard/src/app/disscussion/disscussion.component.html
@@ -15,6 +15,15 @@
         </button>
 
         <textarea
+        rows="1"
+        class="form-control mb-2"
+        name="postTitle"
+        placeholder="Write your title here."
+        required
+        ngModel>
+      </textarea>
+
+        <textarea
           rows="4"
           class="form-control mb-2"
           name="newPost"
@@ -23,13 +32,22 @@
           ngModel>
         </textarea>
 
-        <div class="from-group border border-success mb-3" *ngFor="let post of postsArr">
+        <div class="from-group border border-danger mb-3" *ngFor="let post of postsArr">
 
           <ul class="list-group">
             <div class="d-flex justify-content-between">
               <div class="input-group-prepend">
-                <span class="input-group-text rounded-0" id="inputGroup-sizing-sm">{{ post.userName }}</span>
+                <span class="input-group-text rounded-0" id="inputGroup-sizing-sm">Username: {{ post.userName }}</span>
               </div>
+
+              <div class="input-group">
+                <span class="input-group-text rounded-0">{{ post.title }}</span>
+              </div>
+
+              <div class="input-group">
+                <p class="input-group-text rounded-0">{{ post.gradYear }}</p>
+              </div>
+
               <div class="input-group-append"><span class="input-group-text rounded-0" id="inputGroup-sizing-sm">{{ post.postdate | date:'short' }}</span>
                 <button type="button" class="btn btn-danger" *ngIf="post.userName == currentUser.username" (click)="postDelete(post.id)">
                   <span aria-hidden="true">&times;</span>
