--- a/angularProj/chatboard/src/app/disscussion/disscussion.component.html
+++ b/angularProj/chatboard/src/app/disscussion/disscussion.component.html
@@ -45,6 +45,10 @@
               </div>
 
               <div class="input-group">
+                  <p class="input-group-text rounded-0">{{ post.track }}</p>
+              </div>
+
+              <div class="input-group">
                 <p class="input-group-text rounded-0">{{ post.gradYear }}</p>
               </div>
 
