--- a/angularProj/chatboard/src/app/profilepage/profilepage.component.html
+++ b/angularProj/chatboard/src/app/profilepage/profilepage.component.html
@@ -33,6 +33,10 @@
       <p class="pull-left">Expected Year of Graduation:
           <strong>{{userShow.gradYear}}</strong>
       </p>
+
+      <h5>Bio:</h5>
+      <p>{{userShow.bio}}</p>
+
     </div>
   </div>
   <div class="row">
