--- a/angularProj/chatboard/src/app/updateprofile/updateprofile.component.html
+++ b/angularProj/chatboard/src/app/updateprofile/updateprofile.component.html
@@ -41,18 +41,17 @@
             </div>
             <div class="form-row mt-3">
                 <span class="col">
-                    <label for="party">Update Last Name</label>
-                  <input #lastName class="form-control" id="last-name" name="lastName" [(ngModel)]="profile.lastname" placeholder={{currentUser.lastname}}>
+                    <label for="party">Update Graduation Year</label>
+                  <input #lastName class="form-control" id="gradYear" name="gradYear" [(ngModel)]="profile.gradYear" placeholder={{currentUser.gradYear}}>
                 </span>
-  
-              </div>
+            </div>
+
               <div class="form-row mt-3">
                   <span class="col">
-                      <label for="party">Update Last Name</label>
-                    <input #lastName class="form-control" id="last-name" name="lastName" [(ngModel)]="profile.lastname" placeholder={{currentUser.lastname}}>
+                      <label for="party">Update Bio</label>
+                    <input #lastName class="form-control" id="bio" name="bio" [(ngModel)]="profile.bio" placeholder={{currentUser.bio}}>
                   </span>
-    
-                </div>
+              </div>
 
             <div class="form-row mt-3" id="useless">
               <span class="col">
