--- a/angularProj/chatboard/src/app/disscussion/comments/comments.component.html
+++ b/angularProj/chatboard/src/app/disscussion/comments/comments.component.html
@@ -16,11 +16,12 @@
       (keyup.enter)="onEnter(f)"
       >
   </div>
+
   <div class="collapse" id="{{postId}}">
     <ul class="list-group">
       <li class="list-group-item" *ngFor="let comment of commentArr">{{ comment.body }}
         <div class="input-group-prepend float-right">
-          <span class="input-group-text" id="inputGroup-sizing-sm">{{ comment.username }}</span>
+          <span class="input-group-text" id="inputGroup-sizing-sm">{{ comment.userName }}</span>
         </div>
       </li>
     </ul>
