--- a/angularProj/chatboard/src/app/navbar/navbar.component.html
+++ b/angularProj/chatboard/src/app/navbar/navbar.component.html
@@ -5,28 +5,13 @@
     </a>
     <ul class="nav justify-content-end ">
       <li class="nav-item">
-        <a class="nav-link text-dark " routerLink="/home" href="/home">Home</a>
+        <a class="nav-link text-white " id="homeLink"routerLink="/home" href="/home">Home</a>
       </li>
       <!-- <li class="nav-item">
         <a class="nav-link text-dark" routerLink="/home/search" href="/home/search" >Search</a>
       </li> -->
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle text-dark"
-        href="#"
-        id="navbarDropdownMenuLink"
-        data-toggle="dropdown"
-        aria-haspopup="true"
-        aria-expanded="false">
-        My Account
-      </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" routerLink="/home/profile/{{currentUser.username}}">View Profile</a>
-          <a class="dropdown-item" routerLink="/home/update">Update Profile</a>
-          <a class="dropdown-item" routerLink="/login">Logout</a>
-        </div>
-      </li>
-      <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle text-dark"
+          <a class="nav-link dropdown-toggle text-white"
           href="#"
           id="navbarDropdownMenuLink"
           data-toggle="dropdown"
@@ -41,7 +26,22 @@
             <a class="dropdown-item" routerLink="/home/chat/" (click)= "changeUserForum(4)">Premed</a>
             <a class="dropdown-item" routerLink="/home/chat/" (click)= "changeUserForum(5)">Data Intensive</a>
           </div>
-        </li>
+      </li>
+      <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle text-white"
+          href="#"
+          id="navbarDropdownMenuLink"
+          data-toggle="dropdown"
+          aria-haspopup="true"
+          aria-expanded="false">
+          My Account
+        </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" routerLink="/home/profile/{{currentUser.username}}">View Profile</a>
+            <a class="dropdown-item" routerLink="/home/update">Update Profile</a>
+            <a class="dropdown-item" routerLink="/login">Logout</a>
+          </div>
+      </li>
     </ul>
   </nav>
 </body>
