--- a/angularProj/chatboard/src/app/profilepage/profilepage.component.css
+++ b/angularProj/chatboard/src/app/profilepage/profilepage.component.css
@@ -2,6 +2,12 @@
   background-color: #96d177;
 }
 
+#cardName {
+  font-size: 1.5rem;
+  color: white;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+
 .card {
   margin-top: 20px;
   padding: 30px;
