--- a/angularProj/chatboard/src/app/auth/signup/signup.component.html
+++ b/angularProj/chatboard/src/app/auth/signup/signup.component.html
@@ -25,13 +25,7 @@
               <div class="row">
                 <div class="col">
                   <h6>
-                  <button
-                  class="btn btn-primary mb-2"
-                  type="submit button"
-                  id="submit"
-                  data-dismiss="modal"
-                  [disabled]="!f.valid"
-                  >Sign Up</button>
+                  <button class="btn btn-primary mb-2" type="submit button" id="submit" data-dismiss="modal" [disabled]="!f.valid">Sign Up</button>
                   <a class="btn btn-primary mb-2" id="returnBtn" routerLink="/login">Already have an account?</a>
                   </h6>
                 </div>
